--- a/sobre/index.html
+++ b/sobre/index.html
@@ -20,24 +20,25 @@
   ">
   <meta name="referrer" content="strict-origin-when-cross-origin">
 
-  <link rel="stylesheet" href="css/style.css">
+  <!-- ✅ Caminho absoluto -->
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
   <!-- Cabeçalho -->
   <header class="topbar">
     <div class="brand">
-      <a href="index.html">
-        <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+      <a href="/">
+        <img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
       </a>
     </div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
     <nav class="menu" aria-label="Navegação principal">
-  <a href="/">Início</a>
-  <a href="/sobre/">Sobre</a>
-  <a href="/galeria/">Galeria</a>
-  <a href="/contactos/">Contactos</a>
-</nav>
+      <a href="/">Início</a>
+      <a href="/sobre/" class="active">Sobre</a>
+      <a href="/galeria/">Galeria</a>
+      <a href="/contactos/">Contactos</a>
+    </nav>
   </header>
 
   <!-- Conteúdo -->
@@ -73,21 +74,22 @@
     </div>
   </main>
 
-<footer class="footer">
-  <p>
-    © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
-    <a href="/politica-privacidade/">Política de Privacidade</a> ·
-    <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
-      Livro de Reclamações
-    </a>
-  </p>
-</footer>
+  <!-- Rodapé -->
+  <footer class="footer">
+    <p>
+      © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
+      <a href="/politica-privacidade/">Política de Privacidade</a> ·
+      <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
+        Livro de Reclamações
+      </a>
+    </p>
+  </footer>
 
   <!-- WhatsApp -->
   <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Av%C3%B3s%20Louren%C3%A7o."
      class="whatsapp-float" target="_blank" rel="noopener noreferrer"
      aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
-    <img src="images/whatsapp-icon.svg" alt="WhatsApp">
+    <img src="/images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
   <!-- Banner de cookies -->
@@ -95,14 +97,14 @@
     <div class="cookie-inner">
       <p class="cookie-text">
         Usamos cookies apenas para garantir o bom funcionamento do site.
-        <a href="politica-privacidade.html">Saiba mais</a>
+        <a href="/politica-privacidade/">Saiba mais</a>
       </p>
       <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
     </div>
   </div>
 
   <!-- Scripts -->
-  <script defer src="js/cookies.js"></script>
-  <script defer src="js/app.js"></script>
+  <script defer src="/js/cookies.js"></script>
+  <script defer src="/js/app.js"></script>
 </body>
 </html>
