--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <!-- Cabeçalho -->
   <header class="topbar">
     <div class="brand">
-      <a href="index.html">
-        <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+     <a href="/">
+  <img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
       </a>
     </div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
