--- a/contactos/index.html
+++ b/contactos/index.html
@@ -54,7 +54,7 @@
           39.738794, -8.107801
         </a><br>
         Email:
-        <a href="mailto:alquintaavoslourenco@gmail.com">alquintaavoslourenco@gmail.com</a><br>
+        <a href="mailto:geral@quintadosavoslourenco.pt">geral@quintadosavoslourenco.pt</a><br>
         Telefone:
         <a href="tel:+351960446713">+351 960 446 713</a>
         <span class="note">Chamada para rede móvel nacional</span>
