Update index.html alteração do sobre

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -46,31 +46,48 @@
     <div class="container" style="max-width:800px; text-align:center;">
       <h1>Sobre a Quinta dos Avós Lourenço</h1>
 
-      <p>
-        A <strong>Quinta dos Avós Lourenço</strong> é um alojamento rural com mais de um século de história,
-        localizado no concelho da Sertã. É o refúgio ideal para quem procura tranquilidade, conforto e um
-        contacto direto com a natureza.
-      </p>
+    <p>
+  Entre as colinas serenas do concelho da Sertã, onde a natureza ainda dita o ritmo dos dias,
+  encontra-se a <strong>Quinta dos Avós Lourenço</strong> — um refúgio com alma, história e o aconchego
+  de uma casa que existe desde <strong>1853</strong>.
+</p>
 
-      <p>
-        A casa foi cuidadosamente restaurada, preservando o charme rústico original,
-        mas adaptando-se às comodidades modernas — oferecendo uma experiência autêntica e acolhedora.
-      </p>
+<p>
+  Aqui, onde o <strong>avô Lourenço</strong> guardava o rio e a <strong>avó</strong> vivia do campo,
+  o tempo passa devagar. O campo continua vivo, agora aberto a quem procura a serenidade, o conforto
+  e o encanto das coisas simples.
+</p>
 
-      <p>
-        Rodeada por três hectares de oliveiras, árvores de fruto, animais e trilhos naturais,
-        a Quinta proporciona uma imersão completa na vida rural, com a serenidade e o encanto de outros tempos.
-      </p>
+<p>
+  Rodeada por <strong>oliveiras, árvores de fruto e animais</strong> que fazem parte da paisagem —
+  da burra e das ovelhas aos porcos e pássaros que dão música aos dias —,
+  a Quinta oferece uma verdadeira <em>imersão na vida rural</em>, sem renunciar às comodidades modernas.
+</p>
 
-      <p>
-        O espaço é ideal para famílias, casais e amantes da natureza que procuram descansar,
-        reconectar-se e desfrutar do silêncio e da paisagem da Beira Interior.
-      </p>
+<p>
+  A casa, com <strong>quatro quartos</strong> cuidadosamente restaurados, combina o charme rústico
+  de uma antiga casa de campo com o conforto e o bom gosto de hoje.
+  Cada detalhe conta uma história, cada recanto convida ao descanso.
+</p>
 
-      <p>
-        Mais do que um alojamento, a Quinta dos Avós Lourenço é um lugar de memórias,
-        partilhas e histórias — onde cada recanto reflete o carinho e a dedicação de gerações.
-      </p>
+<p>
+  Os hóspedes começam o dia com um <strong>pequeno-almoço caseiro</strong>,
+  com <em>pão quentinho e produtos locais</em>, e seguem por <strong>trilhos até ao rio</strong>,
+  onde o silêncio só é interrompido pelos sons da natureza.
+</p>
+
+<p>
+  Quem nos visita fala sempre do <strong>sossego</strong>, da <strong>vista deslumbrante</strong>
+  e da <strong>magia dos animais</strong> que tornam a experiência inesquecível.
+</p>
+
+<p>
+  Mais do que um alojamento, a <strong>Quinta dos Avós Lourenço</strong> é um
+  <em>legado de família transformado em partilha</em> — um lugar onde as memórias de ontem
+  inspiram as histórias de hoje.
+</p>
+
+<p><strong>Aqui, cada amanhecer é um regresso às origens.</strong></p>
     </div>
   </main>
 
