--- a/sobre/index.html
+++ b/sobre/index.html
@@ -53,7 +53,7 @@
 </p>
 
 <p>
-  Aqui, onde o <strong>avô Lourenço</strong> guardava o rio e a <strong>avó</strong> vivia do campo,
+  Aqui, onde o <strong>avô</strong> guardava o rio e a <strong>avó</strong> vivia do campo,
   o tempo passa devagar. O campo continua vivo, agora aberto a quem procura a serenidade, o conforto
   e o encanto das coisas simples.
 </p>
