Update index.html favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Quinta dos Avós Lourenço · Alojamento rural na Sertã</title>
   <meta name="description" content="Alojamento rural na Sertã, refúgio tranquilo desde 1853.">
-
+  
+ <!-- ✅ Ícone da aba do navegador -->
+  <link rel="icon" type="image/png" href="favicon.png">
+  
   <!-- ✅ Segurança -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
