--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <meta name="description" content="Alojamento rural na Sertã, refúgio tranquilo desde 1853.">
   
  <!-- ✅ Ícone da aba do navegador -->
-  <link rel="icon" type="image/png" href="favicon.png">
+  <!-- Favicons -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   
   <!-- ✅ Segurança -->
   <meta http-equiv="Content-Security-Policy" content="
