Update index.html tentativa reservas

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
   <a href="/sobre/">Sobre</a>
   <a href="/galeria/">Galeria</a>
   <a href="/contactos/">Contactos</a>
+  <a href="/reservas/">Reservas</a>
+
 </nav>
   </header>
 
