Update index.html tentativa reservas

--- a/contactos/index.html
+++ b/contactos/index.html
@@ -37,6 +37,7 @@
       <a href="/sobre/">Sobre</a>
       <a href="/galeria/">Galeria</a>
       <a href="/contactos/" class="active">Contactos</a>
+      <a href="/reservas/">Reservas</a>
     </nav>
   </header>
 
