Update index.html tentativa reservas

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -38,6 +38,7 @@
       <a href="/sobre/" class="active">Sobre</a>
       <a href="/galeria/">Galeria</a>
       <a href="/contactos/">Contactos</a>
+      <a href="/reservas/">Reservas</a>
     </nav>
   </header>
 
