--- a/reservas/index.html
+++ b/reservas/index.html
@@ -20,12 +20,12 @@
   ">
   <meta name="referrer" content="strict-origin-when-cross-origin">
 
-  <!-- ✅ CSS igual -->
+  <!-- CSS principal -->
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body>
-  <!-- Cabeçalho (igual ao teu) -->
+<body class="page-reservas">
+  <!-- Cabeçalho -->
   <header class="topbar">
     <div class="brand">
       <a href="/">
@@ -44,48 +44,66 @@
 
   <!-- Conteúdo -->
   <main class="section">
-    <div class="container" style="max-width:800px;">
+    <div class="container">
       <h1 style="text-align:center">Pedido de Reserva</h1>
       <p style="text-align:center">Preencha o formulário para verificarmos disponibilidade. Respondemos por email ou telefone.</p>
 
       <!-- Formulário -->
       <form id="bookingForm" action="https://formspree.io/f/SEU_ID" method="POST" novalidate>
         <!-- Honeypot anti-spam -->
-        <input type="text" name="website" class="hp" aria-hidden="true" tabindex="-1" autocomplete="off" style="position:absolute;left:-10000px;opacity:0">
+        <input type="text" name="website" class="hp" aria-hidden="true" tabindex="-1" autocomplete="off" hidden>
 
-        <p><label for="nome"><strong>Nome completo *</strong></label><br>
-        <input id="nome" name="nome" type="text" required autocomplete="name"></p>
+        <p>
+          <label for="nome"><strong>Nome completo *</strong></label>
+          <input id="nome" name="nome" type="text" required autocomplete="name">
+        </p>
 
-        <p><label for="email"><strong>Email *</strong></label><br>
-        <input id="email" name="email" type="email" required autocomplete="email"></p>
+        <p>
+          <label for="email"><strong>Email *</strong></label>
+          <input id="email" name="email" type="email" required autocomplete="email">
+        </p>
 
-        <p><label for="telefone"><strong>Telefone *</strong></label><br>
-        <input id="telefone" name="telefone" type="tel" required inputmode="tel"
-               pattern="^[0-9+()\-\s]{6,}$" placeholder="+351 ..."></p>
+        <p>
+          <label for="telefone"><strong>Telefone *</strong></label>
+          <input id="telefone" name="telefone" type="tel" required inputmode="tel"
+                 pattern="^[0-9+()\\-\\s]{6,}$" placeholder="+351 ...">
+        </p>
 
-        <p><label for="alojamento"><strong>Tipo de alojamento *</strong></label><br>
-        <select id="alojamento" name="alojamento" required>
-          <option value="">— Selecionar —</option>
-          <option>Casa completa</option>
-          <option>Quarto duplo</option>
-          <option>Quarto familiar</option>
-          <option>Outro</option>
-        </select></p>
+        <p>
+          <label for="alojamento"><strong>Tipo de alojamento *</strong></label>
+          <select id="alojamento" name="alojamento" required>
+            <option value="">— Selecionar —</option>
+            <option>Casa completa</option>
+            <option>Quarto duplo</option>
+            <option>Quarto familiar</option>
+            <option>Outro</option>
+          </select>
+        </p>
 
-        <p><label for="checkin"><strong>Check-in *</strong></label><br>
-        <input id="checkin" name="checkin" type="date" required></p>
+        <p>
+          <label for="checkin"><strong>Check-in *</strong></label>
+          <input id="checkin" name="checkin" type="date" required>
+        </p>
 
-        <p><label for="checkout"><strong>Check-out *</strong></label><br>
-        <input id="checkout" name="checkout" type="date" required></p>
+        <p>
+          <label for="checkout"><strong>Check-out *</strong></label>
+          <input id="checkout" name="checkout" type="date" required>
+        </p>
 
-        <p><label for="adultos"><strong>Adultos *</strong></label><br>
-        <input id="adultos" name="adultos" type="number" min="1" max="20" value="2" required></p>
+        <p>
+          <label for="adultos"><strong>Adultos *</strong></label>
+          <input id="adultos" name="adultos" type="number" min="1" max="20" value="2" required>
+        </p>
 
-        <p><label for="criancas"><strong>Crianças</strong></label><br>
-        <input id="criancas" name="criancas" type="number" min="0" max="20" value="0"></p>
+        <p>
+          <label for="criancas"><strong>Crianças</strong></label>
+          <input id="criancas" name="criancas" type="number" min="0" max="20" value="0">
+        </p>
 
-        <p><label for="mensagem"><strong>Mensagem / pedidos especiais</strong></label><br>
-        <textarea id="mensagem" name="mensagem" rows="5" placeholder="Ex.: berço, check-in tardio, alergias…"></textarea></p>
+        <p>
+          <label for="mensagem"><strong>Mensagem / pedidos especiais</strong></label>
+          <textarea id="mensagem" name="mensagem" rows="5" placeholder="Ex.: berço, check-in tardio, alergias…"></textarea>
+        </p>
 
         <p>
           <label>
@@ -95,12 +113,14 @@
           </label>
         </p>
 
-        <p><button type="submit" class="btn">Pedir disponibilidade</button></p>
+        <p>
+          <button type="submit" class="btn primary">Pedir disponibilidade</button>
+        </p>
 
-        <p id="status-ok" class="form-status" style="display:none; color:#065f46">Pedido enviado com sucesso. Obrigado!</p>
-        <p id="status-err" class="form-status" style="display:none; color:#991b1b">Não foi possível enviar. Tente novamente.</p>
+        <p id="status-ok" style="display:none; color:#065f46">Pedido enviado com sucesso. Obrigado!</p>
+        <p id="status-err" style="display:none; color:#991b1b">Não foi possível enviar. Tente novamente.</p>
 
-        <!-- Metadados úteis -->
+        <!-- Metadados -->
         <input type="hidden" name="_subject" value="Novo pedido de reserva — Site">
         <input type="hidden" name="_page" value="/reservas">
       </form>
@@ -117,7 +137,7 @@
     </div>
   </main>
 
-  <!-- Rodapé (igual) -->
+  <!-- Rodapé -->
   <footer class="footer">
     <p>
       © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
@@ -128,14 +148,14 @@
     </p>
   </footer>
 
-  <!-- WhatsApp flutuante (igual) -->
+  <!-- WhatsApp -->
   <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Av%C3%B3s%20Louren%C3%A7o."
      class="whatsapp-float" target="_blank" rel="noopener noreferrer"
      aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
     <img src="/images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
-  <!-- Banner de cookies (igual) -->
+  <!-- Cookies -->
   <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
     <div class="cookie-inner">
       <p class="cookie-text">
@@ -146,11 +166,11 @@
     </div>
   </div>
 
-  <!-- Scripts (iguais) -->
+  <!-- Scripts globais -->
   <script defer src="/js/cookies.js"></script>
   <script defer src="/js/app.js"></script>
 
-  <!-- Script da página (externo por causa da tua CSP) -->
+  <!-- Script desta página -->
   <script defer src="/js/reservas.js"></script>
 </body>
 </html>
