Update index.html tentativa reservas 4

--- a/reservas/index.html
+++ b/reservas/index.html
@@ -49,7 +49,7 @@
       <p style="text-align:center">Preencha o formulário para verificarmos disponibilidade. Respondemos por email ou telefone.</p>
 
       <!-- Formulário -->
-      <form id="bookingForm" action="https://formspree.io/f/SEU_ID" method="POST" novalidate>
+      <form id="bookingForm" action="https://formspree.io/f/xanllrjv" method="POST" novalidate>
         <!-- Honeypot anti-spam -->
         <input type="text" name="website" class="hp" aria-hidden="true" tabindex="-1" autocomplete="off" hidden>
 
