--- a/reservas/index.html
+++ b/reservas/index.html
@@ -6,7 +6,6 @@
   <title>Reservas · Quinta dos Avós Lourenço</title>
   <meta name="description" content="Faça o seu pedido de reserva na Quinta dos Avós Lourenço, alojamento rural na Sertã.">
 
-  <!-- ✅ Segurança (igual ao 'Sobre', com exceção para permitir o Formspree) -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
     script-src 'self';
@@ -20,7 +19,6 @@
   ">
   <meta name="referrer" content="strict-origin-when-cross-origin">
 
-  <!-- CSS principal -->
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -49,28 +47,31 @@
       <p style="text-align:center">Preencha o formulário para verificarmos disponibilidade. Respondemos por email ou telefone.</p>
 
       <!-- Formulário -->
-      <form id="bookingForm" action="https://formspree.io/f/xanllrjv" method="POST" novalidate>
-        <!-- Honeypot anti-spam -->
+      <form id="bookingForm" action="https://formspree.io/f/SEU_ID" method="POST" novalidate>
         <input type="text" name="website" class="hp" aria-hidden="true" tabindex="-1" autocomplete="off" hidden>
 
         <p>
-          <label for="nome"><strong>Nome completo *</strong></label>
-          <input id="nome" name="nome" type="text" required autocomplete="name">
+          <label for="nome">Nome completo *</label>
+          <input id="nome" name="nome" type="text" required autocomplete="name"
+                 pattern="^[A-Za-zÀ-ÖØ-öø-ÿ'`´^~\\s.-]{2,}$"
+                 title="Use apenas letras (pode incluir espaços e acentos).">
         </p>
 
         <p>
-          <label for="email"><strong>Email *</strong></label>
+          <label for="email">Email *</label>
           <input id="email" name="email" type="email" required autocomplete="email">
         </p>
 
         <p>
-          <label for="telefone"><strong>Telefone *</strong></label>
+          <label for="telefone">Telefone *</label>
           <input id="telefone" name="telefone" type="tel" required inputmode="tel"
-                 pattern="^[0-9+()\\-\\s]{6,}$" placeholder="+351 ...">
+                 pattern="^[0-9+()\\-\\s]{6,}$"
+                 title="Apenas números, espaço, +, () e -"
+                 placeholder="+351 ...">
         </p>
 
         <p>
-          <label for="alojamento"><strong>Tipo de alojamento *</strong></label>
+          <label for="alojamento">Tipo de alojamento *</label>
           <select id="alojamento" name="alojamento" required>
             <option value="">— Selecionar —</option>
             <option>Casa completa</option>
@@ -81,46 +82,43 @@
         </p>
 
         <p>
-          <label for="checkin"><strong>Check-in *</strong></label>
+          <label for="checkin">Check-in *</label>
           <input id="checkin" name="checkin" type="date" required>
         </p>
 
         <p>
-          <label for="checkout"><strong>Check-out *</strong></label>
+          <label for="checkout">Check-out *</label>
           <input id="checkout" name="checkout" type="date" required>
         </p>
 
         <p>
-          <label for="adultos"><strong>Adultos *</strong></label>
-          <input id="adultos" name="adultos" type="number" min="1" max="20" value="2" required>
+          <label for="adultos">Adultos *</label>
+          <input id="adultos" name="adultos" type="number" min="1" max="7" value="2" required>
         </p>
 
         <p>
-          <label for="criancas"><strong>Crianças</strong></label>
-          <input id="criancas" name="criancas" type="number" min="0" max="20" value="0">
+          <label for="criancas">Crianças</label>
+          <input id="criancas" name="criancas" type="number" min="0" max="6" value="0">
         </p>
 
         <p>
-          <label for="mensagem"><strong>Mensagem / pedidos especiais</strong></label>
+          <label for="mensagem">Mensagem / pedidos especiais</label>
           <textarea id="mensagem" name="mensagem" rows="5" placeholder="Ex.: berço, check-in tardio, alergias…"></textarea>
         </p>
 
-        <p>
-          <label>
-            <input id="consent" name="consent" type="checkbox" required>
-            Aceito o tratamento dos meus dados para efeitos de gestão de reserva, de acordo com a
-            <a href="/politica-privacidade/">Política de Privacidade</a>. *
-          </label>
+        <p class="consent">
+          <input id="consent" name="consent" type="checkbox" required>
+          <label for="consent">Aceito o tratamento dos meus dados para efeitos de gestão de reserva, de acordo com a
+            <a href="/politica-privacidade/">Política de Privacidade</a>.</label>
         </p>
 
-        <p>
+        <p style="text-align:center">
           <button type="submit" class="btn primary">Pedir disponibilidade</button>
         </p>
 
-        <p id="status-ok" style="display:none; color:#065f46">Pedido enviado com sucesso. Obrigado!</p>
-        <p id="status-err" style="display:none; color:#991b1b">Não foi possível enviar. Tente novamente.</p>
+        <p id="status-ok" style="display:none; color:#065f46; text-align:center;">Pedido enviado com sucesso. Obrigado!</p>
+        <p id="status-err" style="display:none; color:#991b1b; text-align:center;">Não foi possível enviar. Tente novamente.</p>
 
-        <!-- Metadados -->
         <input type="hidden" name="_subject" value="Novo pedido de reserva — Site">
         <input type="hidden" name="_page" value="/reservas">
       </form>
@@ -137,7 +135,6 @@
     </div>
   </main>
 
-  <!-- Rodapé -->
   <footer class="footer">
     <p>
       © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
@@ -148,14 +145,12 @@
     </p>
   </footer>
 
-  <!-- WhatsApp -->
   <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Av%C3%B3s%20Louren%C3%A7o."
      class="whatsapp-float" target="_blank" rel="noopener noreferrer"
      aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
     <img src="/images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
-  <!-- Cookies -->
   <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
     <div class="cookie-inner">
       <p class="cookie-text">
@@ -166,11 +161,8 @@
     </div>
   </div>
 
-  <!-- Scripts globais -->
   <script defer src="/js/cookies.js"></script>
   <script defer src="/js/app.js"></script>
-
-  <!-- Script desta página -->
   <script defer src="/js/reservas.js"></script>
 </body>
 </html>
