--- a/reservas/index.html
+++ b/reservas/index.html
@@ -6,6 +6,7 @@
   <title>Reservas · Quinta dos Avós Lourenço</title>
   <meta name="description" content="Faça o seu pedido de reserva na Quinta dos Avós Lourenço, alojamento rural na Sertã.">
 
+  <!-- CSP igual ao site, com permissões para Formspree -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
     script-src 'self';
@@ -19,6 +20,7 @@
   ">
   <meta name="referrer" content="strict-origin-when-cross-origin">
 
+  <!-- CSS principal do site -->
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -26,9 +28,7 @@
   <!-- Cabeçalho -->
   <header class="topbar">
     <div class="brand">
-      <a href="/">
-        <img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
-      </a>
+      <a href="/"><img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo"></a>
     </div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
     <nav class="menu" aria-label="Navegação principal">
@@ -47,14 +47,13 @@
       <p style="text-align:center">Preencha o formulário para verificarmos disponibilidade. Respondemos por email ou telefone.</p>
 
       <!-- Formulário -->
-      <form id="bookingForm" action="https://formspree.io/f/SEU_ID" method="POST" novalidate>
+      <form id="bookingForm" action="https://formspree.io/f/xanllrjv" method="POST" novalidate>
+        <!-- Honeypot anti-spam -->
         <input type="text" name="website" class="hp" aria-hidden="true" tabindex="-1" autocomplete="off" hidden>
 
         <p>
           <label for="nome">Nome completo *</label>
-          <input id="nome" name="nome" type="text" required autocomplete="name"
-                 pattern="^[A-Za-zÀ-ÖØ-öø-ÿ'`´^~\\s.-]{2,}$"
-                 title="Use apenas letras (pode incluir espaços e acentos).">
+          <input id="nome" name="nome" type="text" required autocomplete="name">
         </p>
 
         <p>
@@ -64,16 +63,13 @@
 
         <p>
           <label for="telefone">Telefone *</label>
-          <input id="telefone" name="telefone" type="tel" required inputmode="tel"
-                 pattern="^[0-9+()\\-\\s]{6,}$"
-                 title="Apenas números, espaço, +, () e -"
-                 placeholder="+351 ...">
+          <!-- sem pattern para evitar erro; JS trata da validação -->
+          <input id="telefone" name="telefone" type="tel" required inputmode="tel" placeholder="+351 ...">
         </p>
 
         <p>
           <label for="alojamento">Tipo de alojamento *</label>
           <select id="alojamento" name="alojamento" required>
-            <option value="">— Selecionar —</option>
             <option>Casa completa</option>
           </select>
         </p>
@@ -114,8 +110,9 @@
         </p>
 
         <p id="status-ok" style="display:none; color:#065f46; text-align:center;">Pedido enviado com sucesso. Obrigado!</p>
-        <p id="status-err" style="display:none; color:#991b1b; text-align:center;">Não foi possível enviar. Tente novamente.</p>
+        <p id="status-err" style="display:none; color:#991b1b; text-align:center;">Erro ao enviar. Verifique os campos e tente novamente.</p>
 
+        <!-- Metadados -->
         <input type="hidden" name="_subject" value="Novo pedido de reserva — Site">
         <input type="hidden" name="_page" value="/reservas">
       </form>
@@ -132,22 +129,23 @@
     </div>
   </main>
 
+  <!-- Rodapé -->
   <footer class="footer">
     <p>
       © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
       <a href="/politica-privacidade/">Política de Privacidade</a> ·
-      <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
-        Livro de Reclamações
-      </a>
+      <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">Livro de Reclamações</a>
     </p>
   </footer>
 
+  <!-- WhatsApp -->
   <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Av%C3%B3s%20Louren%C3%A7o."
      class="whatsapp-float" target="_blank" rel="noopener noreferrer"
      aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
     <img src="/images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
+  <!-- Cookies -->
   <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
     <div class="cookie-inner">
       <p class="cookie-text">
@@ -158,6 +156,7 @@
     </div>
   </div>
 
+  <!-- Scripts (corrigido: /js/ e não /ls/) -->
   <script defer src="/js/cookies.js"></script>
   <script defer src="/js/app.js"></script>
   <script defer src="/js/reservas.js"></script>
